# ComfyBack2Code

./: .gitignore  GEMINI.md  README.md  models.csv  pyproject.toml
cb2c_py/example/runner/: simple.py
cb2c_py/example/workflow/: simple_image.py
cb2c_py/lib/: progress_handler.py  workflow.py  workflow_runner.py
cb2c_py/nodes/: __init__.py  base_node.py  generate_nodes.py  node_discovery.py
cb2c_py/templates/runner/: text2image.py
cb2c_py/templates/workflow/: flux_kontext_dev_nunchaku.py  text2image-sd15.py  text2image.py
cb2c_py/tools/: convert_workflow.py
cb2c_py/tools/workflows/: flux.1-kontext-dev-nunchaku.json
docker/: Dockerfile  Dockerfile.comfy  custom-nodes-loader.sh  custom-nodes.txt  docker-compose.yml  download_models.py  extra_model_paths.yaml
example/runner/: simple.py
example/workflow/: simple.py
lib/: workflow.py
nodes/: __init__.py  generate_nodes.py  node_discovery.py
tests/: test_workflow.py  test_workflow_runner.py
